some modification done and top white space fixed

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -42,7 +42,8 @@ body {
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
+    /* margin: 0px 200px; */
 }
 
 nav ul {
